--- a/PaymentTest/Views/Home/payment.cshtml
+++ b/PaymentTest/Views/Home/payment.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "payment";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -12,7 +13,7 @@
     <title>Payment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="./payment.css/payment.css">
+    <link rel="stylesheet" href="./css/payment.css">
 
 </head>
 
@@ -53,7 +54,7 @@
 
 
             <div class="buttonSection w-100 h-50 mt-5">
-                <a href="@Url.Action("Pay","Payment")" class="btn btn-primary w-100 h-50">پرداخت </a>
+                <a href="@Url.Action("Pay", "Payment")" class="btn btn-primary w-100 h-50">پرداخت </a>
             </div>
         </div>
 
@@ -65,4 +66,6 @@
         crossorigin="anonymous"></script>
 
 </html>
+
+
 
