--- a/PaymentTest/Views/Shared/_Layout.cshtml
+++ b/PaymentTest/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="payment">payment</a>
+                        </li>
                     </ul>
                 </div>
             </div>
